--- a/.github/workflows/10msvc.yml
+++ b/.github/workflows/10msvc.yml
@@ -1,4 +1,4 @@
-name: SonarQube Analysis
+name: Build
 
 on:
   push:
@@ -6,26 +6,28 @@ on:
       - main
 
 jobs:
-  sonarqube:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup JDK
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
           java-version: '17'
-
       - name: Build with Maven
-        run: mvn clean install
-
+        run: mvn clean verify
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
-        with:
-          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
-          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
-          sonar-login: ${{ secrets.SONAR_TOKEN }}
-          sonar-java-binaries: target/classes
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
