--- a/.github/workflows/10msvc.yml
+++ b/.github/workflows/10msvc.yml
@@ -34,50 +34,13 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      - name: Build and Push adservice Docker image
+      - name: Build and Push Docker images
         run: |
-          docker build -t limkel/adservice:2.0 .
-          docker push limkel/adservice:2.0
-      - name: Build and Push cartservice Docker image
-        run: |
-          docker build -t limkel/cartservice:2.0 .
-          docker push limkel/cartservice:2.0
-      - name: Build and Push checkoutservice Docker image
-        run: |
-          docker build -t limkel/checkoutservice:2.0 .
-          docker push limkel/checkoutservice:2.0
-      - name: Build and Push currencyservice Docker image
-        run: |
-          docker build -t limkel/currencyservice:2.0 .
-          docker push limkel/currencyservice:2.0
-      - name: Build and Push emailservice Docker image
-        run: |
-          docker build -t limkel/emailservice:2.0 .
-          docker push limkel/emailservice:2.0
-      - name: Build and Push frontend Docker image
-        run: |
-          docker build -t limkel/frontend:2.0 .
-          docker push limkel/frontend:2.0
-      - name: Build and Push loadgenerator Docker image
-        run: |
-          docker build -t limkel/loadgenerator:2.0 .
-          docker push limkel/loadgenerator:2.0
-      - name: Build and Push paymentservice Docker image
-        run: |
-          docker build -t limkel/paymentservice:2.0 .
-          docker push limkel/paymentservice:2.0
-      - name: Build and Push productcatalogservice Docker image
-        run: |
-          docker build -t limkel/productcatalogservice:2.0 .
-          docker push limkel/productcatalogservice:2.0
-      - name: Build and Push recommendationservice Docker image
-        run: |
-          docker build -t limkel/recommendationservice:2.0 .
-          docker push limkel/recommendationservice:2.0
-      - name: Build and Push shippingservice Docker image
-        run: |
-          docker build -t limkel/shippingservice:2.0 .
-          docker push limkel/shippingservice:2.0
+          services=(adservice cartservice checkoutservice currencyservice emailservice frontend loadgenerator paymentservice productcatalogservice recommendationservice shippingservice)
+          for service in "${services[@]}"; do
+            docker build -t "limkel/$service:2.0" .
+            docker push "limkel/$service:2.0"
+          done
       - name: Kubectl Action
         uses: tale/kubectl-action@v1
         with:
