--- a/.github/workflows/10msvc.yml
+++ b/.github/workflows/10msvc.yml
@@ -39,6 +39,9 @@ jobs:
           wget https://github.com/aquasecurity/trivy/releases/download/v0.20.0/trivy_0.20.0_Linux-64bit.tar.gz
           tar zxvf trivy_0.20.0_Linux-64bit.tar.gz
           sudo mv trivy /usr/local/bin/
+      - name: Trivy FS Scan
+      run: |
+        trivy fs --format table -o trivy-fs-report.html .
       - name: Trivy Scan
         run: trivy image --severity HIGH,CRITICAL limkel/adservice:2.0
       - name: Install OWASP Dependency-Check
