--- a/.github/workflows/10msvc.yml
+++ b/.github/workflows/10msvc.yml
@@ -52,4 +52,20 @@ jobs:
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v7.0.2/dependency-check-7.0.2-release.zip
           unzip dependency-check-7.0.2-release.zip
           sudo mv dependency-check/bin/* /usr/local/bin/
-      - name: OWASP Dependency-Chec
+      - name: OWASP Dependency-Check Scan
+        run: dependency-check --scan /10microsvc/src/
+      - name: Build and Push Docker images for microservices
+        run: |
+          services=(adservice cartservice checkoutservice currencyservice emailservice frontend loadgenerator paymentservice productcatalogservice recommendationservice shippingservice)
+          for service in "${services[@]}"; do
+            cd microservices/$service
+            docker build -t "limkel/$service:2.0" .
+            docker push "limkel/$service:2.0"
+          done
+      - name: Kubectl Action
+        uses: tale/kubectl-action@v1
+        with:
+          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+      - run: |
+          kubectl apply -f deployment-service.yml -n mygithub
+          kubectl get svc -n webapps
