--- a/.github/workflows/10msvc.yml
+++ b/.github/workflows/10msvc.yml
@@ -25,16 +25,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "20"
-
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        with:
-          args: >
-            -Dsonar.java.binaries=.
-
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
@@ -54,14 +44,17 @@ jobs:
 
       - name: Trivy FS Scan
         run: |
-          trivy fs --format table -o trivy-fs-report.html .
+          trivy fs --severity HIGH,CRITICAL --format table -o trivy-fs-report.html .
 
       - name: Trivy Scan
         run: trivy image --severity HIGH,CRITICAL limkel/adservice:2.0
 
       - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
       - name: Build and push adservice
         working-directory: src/adservice
         run: |
@@ -134,6 +127,7 @@ jobs:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           context: ${{ secrets.KUBE_CONTEXT }}
 
-      - run: |
-          kubectl apply -f deployment-service.yml -n mygithub
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f /path/to/deployment-service.yml -n mygithub
           kubectl get svc -n webapps
