--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,38 @@ jobs:
         run: |
           trivy fs --severity HIGH,CRITICAL --format table -o trivy-fs-report.html .
 
-      - name: Trivy Scan
+      - name: Trivy Scan adservice
         run: trivy image --severity HIGH,CRITICAL limkel/adservice:2.0
+
+      - name: Trivy Scan cartservice
+        run: trivy image --severity HIGH,CRITICAL limkel/cartservice:2.0
+
+      - name: Trivy Scan checkoutservice
+        run: trivy image --severity HIGH,CRITICAL limkel/checkoutservice:2.0
+
+      - name: Trivy Scan currencyservice
+        run: trivy image --severity HIGH,CRITICAL limkel/currencyservice:2.0
+
+      - name: Trivy Scan emailservice
+        run: trivy image --severity HIGH,CRITICAL limkel/emailservice:2.0
+
+      - name: Trivy Scan frontend
+        run: trivy image --severity HIGH,CRITICAL limkel/frontend:2.0
+
+      - name: Trivy Scan loadgenerator
+        run: trivy image --severity HIGH,CRITICAL limkel/loadgenerator:2.0
+
+      - name: Trivy Scan paymentservice
+        run: trivy image --severity HIGH,CRITICAL limkel/paymentservice:2.0
+
+      - name: Trivy Scan productcatalogservice
+        run: trivy image --severity HIGH,CRITICAL limkel/productcatalogservice:2.0
+
+      - name: Trivy Scan recommendationservice
+        run: trivy image --severity HIGH,CRITICAL limkel/recommendationservice:2.0
+
+      - name: Trivy Scan shippingservice
+        run: trivy image --severity HIGH,CRITICAL limkel/shippingservice:2.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -49,7 +79,7 @@ jobs:
       - name: Build and push Docker images
         run: |
           docker build -t limkel/adservice:2.0 src/adservice
-          docker build -t limkel/cartservice:2.0 src/cartservice/src
+          docker build -t limkel/cartservice:2.0 src/cartservice
           docker build -t limkel/checkoutservice:2.0 src/checkoutservice
           docker build -t limkel/currencyservice:2.0 src/currencyservice
           docker build -t limkel/emailservice:2.0 src/emailservice
