--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,37 +38,37 @@ jobs:
           trivy fs --severity HIGH,CRITICAL --format table -o trivy-fs-report.html .
 
       - name: Trivy Scan adservice
-        run: trivy image --severity HIGH,CRITICAL limkel/adservice:2.0
+        run: trivy image --format table -o trivy-image-report-adservice.html limkel/adservice:2.0
 
       - name: Trivy Scan cartservice
-        run: trivy image --severity HIGH,CRITICAL limkel/cartservice:2.0
+        run: trivy image --format table -o trivy-image-report-cartservice.html limkel/cartservice:2.0
 
       - name: Trivy Scan checkoutservice
-        run: trivy image --severity HIGH,CRITICAL limkel/checkoutservice:2.0
+        run: trivy image --format table -o trivy-image-report-checkoutservice.html limkel/checkoutservice:2.0
 
       - name: Trivy Scan currencyservice
-        run: trivy image --severity HIGH,CRITICAL limkel/currencyservice:2.0
+        run: trivy image --format table -o trivy-image-report-currencyservice.html limkel/currencyservice:2.0
 
       - name: Trivy Scan emailservice
-        run: trivy image --severity HIGH,CRITICAL limkel/emailservice:2.0
+        run: trivy image --format table -o trivy-image-report-emailservice.html limkel/emailservice:2.0
 
       - name: Trivy Scan frontend
-        run: trivy image --severity HIGH,CRITICAL limkel/frontend:2.0
+        run: trivy image --format table -o trivy-image-report-frontend.html limkel/frontend:2.0
 
       - name: Trivy Scan loadgenerator
-        run: trivy image --severity HIGH,CRITICAL limkel/loadgenerator:2.0
+        run: trivy image --format table -o trivy-image-report-loadgenerator.html limkel/loadgenerator:2.0
 
       - name: Trivy Scan paymentservice
-        run: trivy image --severity HIGH,CRITICAL limkel/paymentservice:2.0
+        run: trivy image --format table -o trivy-image-report-paymentservice.html limkel/paymentservice:2.0
 
       - name: Trivy Scan productcatalogservice
-        run: trivy image --severity HIGH,CRITICAL limkel/productcatalogservice:2.0
+        run: trivy image --format table -o trivy-image-report-productcatalogservice.html limkel/productcatalogservice:2.0
 
       - name: Trivy Scan recommendationservice
-        run: trivy image --severity HIGH,CRITICAL limkel/recommendationservice:2.0
+        run: trivy image --format table -o trivy-image-report-recommendationservice.html limkel/recommendationservice:2.0
 
       - name: Trivy Scan shippingservice
-        run: trivy image --severity HIGH,CRITICAL limkel/shippingservice:2.0
+        run: trivy image --format table -o trivy-image-report-shippingservice.html limkel/shippingservice:2.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
